pkg/front_end/testcases/inference/downwards_inference_assignment_statements.dart.strong.expect
library test;
import self as self;
import "dart:core" as core;

static const field dynamic #errors = const <dynamic>["pkg/front_end/testcases/inference/downwards_inference_assignment_statements.dart:10:69: Error: A value of type 'dart.core::String' can't be assigned to a variable of type 'dart.core::int'.\nTry changing the type of the left hand side, or casting the right hand side to 'dart.core::int'.\n  l = /*@typeArgs=int*/ [/*error:LIST_ELEMENT_TYPE_NOT_ASSIGNABLE*/ \"hello\"];\n                                                                    ^"]/* from null */;
static method test() → void {
  core::List<core::int> l;
  l = <core::int>["hello" as{TypeError} core::int];
  l = l = <core::int>[1];
}
static method main() → dynamic {}
